--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Website</title>
+  <link rel="stylesheet" href="https://use.typekit.net/enf1tyg.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
