--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <title>Website</title>
   <link rel="stylesheet" href="https://use.typekit.net/enf1tyg.css">
   <base href="/">
-
-  <meta name=”viewport” content=”width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no”>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
