add keywords and other meta tags.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-  <title>Website</title>
+  <meta name="description" content="Personal website of Dieter Jordens, a software engineer">
+  <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring">
+  <meta name="author" content="Dieter Jordens">
+  <meta http-equiv="content-language" content="nl,fr,en">
+  <title>My website</title>
   <link rel="stylesheet" href="https://use.typekit.net/enf1tyg.css">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
