update website description.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-  <meta name="description" content="Personal website of Dieter Jordens, a software engineer">
+  <meta name="description" content="Dieter is passionate about full stack agile software development and artificial intelligence. He is working as a Software Crafter at Continuum Consulting.">
   <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring">
   <meta name="author" content="Dieter Jordens">
   <meta http-equiv="content-language" content="nl,fr,en">
