update meta data description and title

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-  <meta name="description" content="This is the web page of Dieter Jordens. Dieter is passionate about full stack agile software development and artificial intelligence. He is working as a Software
-  Craftsman at Continuum Consulting. On his web page you can find his CV, articles, books and more!">
+  <meta name="description" content="Personal website of Dieter Jordens. Here, you can find the latest of his work in software development.">
   <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium">
   <meta name="author" content="Dieter Jordens">
   <meta http-equiv="content-language" content="nl,fr,en">
-  <title>My website</title>
+  <title>Dieter Jordens</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
