--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium">
   <meta name="author" content="Dieter Jordens">
   <meta http-equiv="content-language" content="nl,fr,en">
-  <title>Dieter Jordens</title>
+  <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
