--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-  <meta name="description" content="Personal website of Dieter Jordens. Here, you can find the latest of his work in software development.">
+  <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development.">
   <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium">
   <meta name="author" content="Dieter Jordens">
   <meta http-equiv="content-language" content="nl,fr,en">
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
