favicon broken link fix.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="content-language" content="nl,fr,en">
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
