fix twitter card / and use open graph too.

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
   <meta charset="utf-8">
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <meta name="author" content="Dieter Jordens">
-  <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development.">
-  <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium">
-  <meta name="twitter:card" content="https://www.dieterjordens.be/assets/images/logo.png">
-  <meta name="twitter:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development.">
-  <meta name="twitter:title" content="Dieter Jordens - Software Craftsman | Personal Website">
-  <meta name="twitter:image" content="https://www.dieterjordens.be/assets/images/dieter.jpg">
-  <meta name="twitter:site" content="@Dieter_Jordens">
-  <meta name="twitter:creator" content="@Dieter_Jordens">
-  <meta http-equiv="content-language" content="nl,fr,en">
+  <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
+  <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium"/>
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@Dieter_Jordens"/>
+  <meta name="twitter:creator" content="@Dieter_Jordens"/>
+  <meta name="og:url" content="https://www.dieterjordens.be"/>
+  <meta name="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
+  <meta name="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
+  <meta name="og:image" content="https://www.dieterjordens.be/assets/images/logo.png"/>
+  <meta http-equiv="content-language" content="nl,fr,en"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
+  <meta content="text/html; charset=UTF-8" name="Content-Type"/>
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <base href="https://www.dieterjordens.be/">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
