--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
-  <meta name="author" content="Dieter Jordens">
+  <meta name="author" content="Dieter Jordens"/>
   <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
   <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium"/>
   <meta name="twitter:card" content="summary"/>
@@ -13,11 +13,14 @@
   <meta name="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
   <meta name="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
   <meta name="og:image" content="https://www.dieterjordens.be/assets/images/logo.png"/>
+  <meta name="og:locale" content="en_GB"/>
+  <meta property="og:locale:alternate" content="fr_FR"/>
+  <meta property="og:locale:alternate" content="nl_NL"/>
   <meta http-equiv="content-language" content="nl,fr,en"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
-  <base href="https://www.dieterjordens.be/">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
+  <base href="https://www.dieterjordens.be/"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -25,6 +28,7 @@
     function gtag() {
       dataLayer.push(arguments);
     }
+
     gtag('js', new Date());
   </script>
 </head>
