wups open graph works with property

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta property="og:url" content="https://www.dieterjordens.be"/>
+  <meta property="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
+  <meta property="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
+  <meta property="og:image" content="https://www.dieterjordens.be/assets/images/logo.png"/>
+  <meta property="og:locale" content="en_GB"/>
+  <meta property="og:locale:alternate" content="fr_FR"/>
+  <meta property="og:locale:alternate" content="nl_NL"/>
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <meta name="author" content="Dieter Jordens"/>
   <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
@@ -8,13 +15,6 @@
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@Dieter_Jordens"/>
   <meta name="twitter:creator" content="@Dieter_Jordens"/>
-  <meta name="og:url" content="https://www.dieterjordens.be"/>
-  <meta name="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
-  <meta name="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
-  <meta name="og:image" content="https://www.dieterjordens.be/assets/images/logo.png"/>
-  <meta name="og:locale" content="en_GB"/>
-  <meta property="og:locale:alternate" content="fr_FR"/>
-  <meta property="og:locale:alternate" content="nl_NL"/>
   <meta http-equiv="content-language" content="nl,fr,en"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
