wups open graph works with property

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta property="og:url" content="https://www.dieterjordens.be"/>
+  <meta property="og:url" content="http://www.dieterjordens.be"/>
+  <meta property="og:secure_url" content="https://www.dieterjordens.be"/>
   <meta property="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
   <meta property="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
-  <meta property="og:image" content="https://www.dieterjordens.be/assets/images/logo.png"/>
+  <meta property="og:image" content="http://www.dieterjordens.be/assets/images/logo.png"/>
   <meta property="og:locale" content="en_GB"/>
   <meta property="og:locale:alternate" content="fr_FR"/>
   <meta property="og:locale:alternate" content="nl_NL"/>
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="100001483634865"/>
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <meta name="author" content="Dieter Jordens"/>
   <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
