wups open graph works with property

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta property="og:locale:alternate" content="fr_FR"/>
   <meta property="og:locale:alternate" content="nl_NL"/>
   <meta property="og:type" content="website" />
-  <meta property="fb:app_id" content="100001483634865"/>
+  <meta property="fb:admins" content="100001483634865"/>
   <title>Dieter Jordens - Software Craftsman | Personal Website</title>
   <meta name="author" content="Dieter Jordens"/>
   <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
