make sure it works locally as well.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
-  <base href="https://www.dieterjordens.be/"/>
+  <base href="/"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
