--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
   <base href="/"/>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1"></script>
-  <script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1" type="text/javascript"></script>
+  <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
