update favicon and logo

--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,23 @@
 <head>
   <meta property="og:url" content="http://www.dieterjordens.com"/>
   <meta property="og:secure_url" content="https://www.dieterjordens.com"/>
-  <meta property="og:title" content="Dieter Jordens - Software Craftsman | Personal Website"/>
-  <meta property="og:description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
+  <meta property="og:title" content="Dieter Jordens"/>
+  <meta property="og:description" content="Website of Dieter Jordens, a software & data engineer working at Continuum Consulting NV."/>
   <meta property="og:image" content="http://www.dieterjordens.com/assets/images/logo.png"/>
   <meta property="og:locale" content="en_GB"/>
-  <meta property="og:locale:alternate" content="fr_FR"/>
-  <meta property="og:locale:alternate" content="nl_NL"/>
   <meta property="og:type" content="website" />
   <meta property="fb:admins" content="100001483634865"/>
-  <title>Dieter Jordens - Software Craftsman | Personal Website</title>
+  <title>Dieter Jordens</title>
   <meta name="author" content="Dieter Jordens"/>
-  <meta name="description" content="Personal website of Dieter Jordens. Here, you'll find the latest of his work in software development."/>
-  <meta name="keywords" content="Dieter,Jordens,software,consultant,Java,blog,Continuum,Consulting,Angular,Spring,Medium"/>
+  <meta name="description" content="Website of Dieter Jordens, a software & data engineer working at Continuum Consulting NV."/>
+  <meta name="keywords" content="Dieter,Jordens,software,consultant,data,engineer,blog,Continuum,Consulting,Medium"/>
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@Dieter_Jordens"/>
   <meta name="twitter:creator" content="@Dieter_Jordens"/>
-  <meta http-equiv="content-language" content="nl,fr,en"/>
+  <meta http-equiv="content-language" content="en"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="src/assets/images/favicon.png"/>
   <base href="/"/>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1" type="text/javascript"></script>
   <script type="text/javascript">
