add google site verification

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
   <meta http-equiv="content-language" content="en"/>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
+  <meta name="google-site-verification" content="BgfW2X7jTb4xg7smz9v_b0ErWyc_o_yDrggE-_IC3nk" />
   <link rel="icon" type="image/x-icon" href="src/assets/images/favicon.png"/>
   <base href="/"/>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1" type="text/javascript"></script>
   <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
 
@@ -31,6 +31,7 @@
 
     gtag('js', new Date());
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169820783-1" type="text/javascript"></script>
 </head>
 <body>
 <app-root></app-root>
