--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
   <meta content="text/html; charset=UTF-8" name="Content-Type"/>
   <meta name="google-site-verification" content="BgfW2X7jTb4xg7smz9v_b0ErWyc_o_yDrggE-_IC3nk" />
-  <link rel="icon" type="image/x-icon" href="src/assets/images/favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"/>
   <base href="/"/>
   <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
