Update index.html to recent events

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta property="og:url" content="http://www.dieterjordens.com"/>
   <meta property="og:secure_url" content="https://www.dieterjordens.com"/>
   <meta property="og:title" content="Dieter Jordens"/>
-  <meta property="og:description" content="Website of Dieter Jordens, a software & data engineer working at Continuum Consulting NV."/>
+  <meta property="og:description" content="Website of Dieter Jordens, a freelance Software & Data Engineer."/>
   <meta property="og:image" content="http://www.dieterjordens.com/assets/images/logo.png"/>
   <meta property="og:locale" content="en_GB"/>
   <meta property="og:type" content="website" />
   <meta property="fb:admins" content="100001483634865"/>
   <meta name="author" content="Dieter Jordens"/>
-  <meta name="description" content="Website of Dieter Jordens, a software & data engineer working at Continuum Consulting NV."/>
-  <meta name="keywords" content="Dieter,Jordens,software,consultant,data,engineer,blog,Continuum,Consulting,Medium"/>
+  <meta name="description" content="Website of Dieter Jordens, a freelance Software & Data Engineer."/>
+  <meta name="keywords" content="Dieter,Jordens,software,data,engineer"/>
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@Dieter_Jordens"/>
   <meta name="twitter:creator" content="@Dieter_Jordens"/>
