Update title and description tag for better SEO.

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dieter Jordens</title>
+  <title>Dieter Jordens - Freelance Software & Data Engineer | Home</title>
   <meta property="og:url" content="http://www.dieterjordens.com"/>
   <meta property="og:secure_url" content="https://www.dieterjordens.com"/>
   <meta property="og:title" content="Dieter Jordens"/>
-  <meta property="og:description" content="Website of Dieter Jordens, a freelance Software & Data Engineer."/>
-  <meta property="og:image" content="http://www.dieterjordens.com/assets/images/logo.png"/>
+  <meta property="og:description" content="Dieter wants to create value from your data. Get the latest information about his projects, articles, books, talks, and other data."/>
+  <meta property="og:image" content="https://www.dieterjordens.com/assets/images/logo.png"/>
   <meta property="og:locale" content="en_GB"/>
   <meta property="og:type" content="website" />
   <meta property="fb:admins" content="100001483634865"/>
